src/components/content-resources/View.scss
@import "~nti-style-common";

.content-resource-view {
	$sideMargin: 20px;
	@include clearfix;
	padding: rem-calc(0 $sideMargin);
	min-height: rem-calc(160px);

	display: flex;
	user-select: none;

	.view-main-pane {
		transition: box-shadow 0.3s ease, background-color 0.3s ease;
		background-color: rgba(0,0,0, 0);
		flex: 1 1 auto;
		overflow: scroll;

		padding-right: rem-calc($sideMargin - 5px);

		&.entity-drag-over {
			box-shadow: inset 0 0 0 5px $primary-blue;
			background-color: rgba($primary-blue, 0.1);

			.section.files {
				opacity: 0.3;
				pointer-events: none;
			}
		}
	}

	&:not(.split) .view-main-pane {
		padding-left: rem-calc($sideMargin);
		margin-left: rem-calc(-$sideMargin);
		padding-right: rem-calc($sideMargin);
		margin-right: rem-calc(-$sideMargin);
	}

	.context-view-pane {
		flex: 0;
		overflow: scroll;
		min-width: 350px;

		margin-right: rem-calc(-$sideMargin);
		border: 0 solid $border-grey-light;
		border-width: 0 0 0 1px;
		background: #fff;
	}

	[draggable] {
		user-select: none;
		-khtml-user-drag: element;
		-webkit-user-drag: element;
		img, svg {
			pointer-events: none;
		}
	}
}

